src/main/java/com/example/authseverproyectopsp/spring/rest/errors/CredentialInvalid.java
package com.example.authseverproyectopsp.spring.rest.errors;

public class CredentialInvalid extends RuntimeException {
    public CredentialInvalid(String message) {
        super(message);
    }
}
